--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
 }
 html{
     font-family: 'Poppins', sans-serif;
-    background: url(bg.jpg);
+    background: url(https://i.ibb.co/ZTYXqJ5/bg.jpg);
+    height: 100%;    
+    box-shadow: inset -200px -32px 133px -19px rgba(0,0,0,0.75),  inset 200px -32px 133px -19px rgba(0,0,0,0.75);
     background-size: 400px;
-    box-shadow: inset -200px -32px 133px -19px rgba(0,0,0,0.75),  inset 200px -32px 133px -19px rgba(0,0,0,0.75);;
     font-size:20px;    
     color:#242423;
 } 
@@ -16,6 +17,7 @@ html{
 .container{
     background-size: cover;
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,12 +59,13 @@ li{
   -ms-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
   -o-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
-    transition: width 1s;
 }
-li:hover{
-    width: 450px;
+.results{
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+	max-height: 475px
 }
-
 .population{
     font-size:0.7em;
     font-weight: 200;
